@@ -6,17 +6,14 @@ import com.nelumbo.parking.entities.Parking;
 import com.nelumbo.parking.entities.User;
 import com.nelumbo.parking.enums.Role;
 import com.nelumbo.parking.services.ParkingService;
-import com.nelumbo.parking.exceptions.ValidationException;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.security.access.AccessDeniedException;
 import org.springframework.security.test.context.support.WithMockUser;
+import org.springframework.test.context.bean.override.mockito.MockitoBean;
 
 import java.math.BigDecimal;
 import java.util.Arrays;
@@ -27,13 +24,13 @@ import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.Mockito.*;
 
-@ExtendWith(MockitoExtension.class)
+@WebMvcTest(ParkingController.class)
 class ParkingControllerTest {
 
-    @Mock
+    @MockitoBean
     private ParkingService parkingService;
 
-    @InjectMocks
+    @Autowired
     private ParkingController parkingController;
 
     private Parking testParking;
@@ -70,7 +67,7 @@ class ParkingControllerTest {
 
     @Test
     @WithMockUser(roles = "ADMIN")
-    void createParking_AsAdmin_Success() {
+    void createParkingAsAdminSuccess() {
         // Arrange
         when(parkingService.createParking(any(ParkingRequest.class))).thenReturn(testParking);
 
@@ -86,16 +83,16 @@ class ParkingControllerTest {
 
     @Test
     @WithMockUser(roles = "SOCIO")
-    void createParking_AsSocio_ThrowsAccessDeniedException() {
+    void createParkingAsSocioThrowsAccessDeniedException() {
         // Act & Assert
-        assertThrows(AccessDeniedException.class, () ->
+        assertThrows(org.springframework.security.access.AccessDeniedException.class, () ->
             parkingController.createParking(parkingRequest));
         verify(parkingService, never()).createParking(any(ParkingRequest.class));
     }
 
     @Test
     @WithMockUser(roles = "ADMIN")
-    void getParkingById_AsAdmin_Success() {
+    void getParkingByIdAsAdminSuccess() {
         // Arrange
         when(parkingService.getParkingById(1L)).thenReturn(testParking);
 
@@ -111,7 +108,7 @@ class ParkingControllerTest {
 
     @Test
     @WithMockUser(roles = "SOCIO")
-    void getParkingById_AsSocio_Success() {
+    void getParkingByIdAsSocioSuccess() {
         // Arrange
         when(parkingService.getParkingById(1L)).thenReturn(testParking);
 
@@ -121,14 +118,15 @@ class ParkingControllerTest {
         // Assert
         assertEquals(HttpStatus.OK, response.getStatusCode());
         assertNotNull(response.getBody());
+        assertEquals("Test Parking", response.getBody().getName());
         verify(parkingService).getParkingById(1L);
     }
 
     @Test
     @WithMockUser(roles = "ADMIN")
-    void getAllParkings_AsAdmin_Success() {
+    void getAllParkingsAsAdminSuccess() {
         // Arrange
-        List<Parking> parkings = List.of(testParking);
+        List<Parking> parkings = Arrays.asList(testParking);
         when(parkingService.getAllParkings()).thenReturn(parkings);
 
         // Act
@@ -143,16 +141,16 @@ class ParkingControllerTest {
 
     @Test
     @WithMockUser(roles = "SOCIO")
-    void getAllParkings_AsSocio_ThrowsAccessDeniedException() {
+    void getAllParkingsAsSocioThrowsAccessDeniedException() {
         // Act & Assert
-        assertThrows(AccessDeniedException.class, () ->
+        assertThrows(org.springframework.security.access.AccessDeniedException.class, () ->
             parkingController.getAllParkings());
         verify(parkingService, never()).getAllParkings();
     }
 
     @Test
     @WithMockUser(roles = "ADMIN")
-    void updateParking_AsAdmin_Success() {
+    void updateParkingAsAdminSuccess() {
         // Arrange
         when(parkingService.updateParking(anyLong(), any(ParkingRequest.class))).thenReturn(testParking);
 
@@ -162,24 +160,22 @@ class ParkingControllerTest {
         // Assert
         assertEquals(HttpStatus.OK, response.getStatusCode());
         assertNotNull(response.getBody());
+        assertEquals("Test Parking", response.getBody().getName());
         verify(parkingService).updateParking(1L, parkingRequest);
     }
 
     @Test
     @WithMockUser(roles = "SOCIO")
-    void updateParking_AsSocio_ThrowsAccessDeniedException() {
+    void updateParkingAsSocioThrowsAccessDeniedException() {
         // Act & Assert
-        assertThrows(AccessDeniedException.class, () ->
+        assertThrows(org.springframework.security.access.AccessDeniedException.class, () ->
             parkingController.updateParking(1L, parkingRequest));
         verify(parkingService, never()).updateParking(anyLong(), any(ParkingRequest.class));
     }
 
     @Test
     @WithMockUser(roles = "ADMIN")
-    void deleteParking_AsAdmin_Success() {
-        // Arrange
-        doNothing().when(parkingService).deleteParking(1L);
-
+    void deleteParkingAsAdminSuccess() {
         // Act
         ResponseEntity<Void> response = parkingController.deleteParking(1L);
 
@@ -190,82 +186,16 @@ class ParkingControllerTest {
 
     @Test
     @WithMockUser(roles = "SOCIO")
-    void deleteParking_AsSocio_ThrowsAccessDeniedException() {
+    void deleteParkingAsSocioThrowsAccessDeniedException() {
         // Act & Assert
-        assertThrows(AccessDeniedException.class, () ->
+        assertThrows(org.springframework.security.access.AccessDeniedException.class, () ->
             parkingController.deleteParking(1L));
         verify(parkingService, never()).deleteParking(anyLong());
     }
 
     @Test
     @WithMockUser(roles = "ADMIN")
-    void getParkingsByPartner_AsAdmin_Success() {
-        // Arrange
-        List<Parking> parkings = List.of(testParking);
-        when(parkingService.getParkingsByPartner(1L)).thenReturn(parkings);
-
-        // Act
-        ResponseEntity<List<Parking>> response = parkingController.getParkingsByPartner(1L);
-
-        // Assert
-        assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertNotNull(response.getBody());
-        assertEquals(1, response.getBody().size());
-        verify(parkingService).getParkingsByPartner(1L);
-    }
-
-    @Test
-    @WithMockUser(roles = "SOCIO")
-    void getParkingsByPartner_AsSocio_Success() {
-        // Arrange
-        List<Parking> parkings = List.of(testParking);
-        when(parkingService.getParkingsByPartner(1L)).thenReturn(parkings);
-
-        // Act
-        ResponseEntity<List<Parking>> response = parkingController.getParkingsByPartner(1L);
-
-        // Assert
-        assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertNotNull(response.getBody());
-        verify(parkingService).getParkingsByPartner(1L);
-    }
-
-    @Test
-    @WithMockUser(roles = "ADMIN")
-    void getParkingsByPartnerEmail_AsAdmin_Success() {
-        // Arrange
-        List<Parking> parkings = List.of(testParking);
-        when(parkingService.getParkingsByPartnerEmail("partner@test.com")).thenReturn(parkings);
-
-        // Act
-        ResponseEntity<List<Parking>> response = parkingController.getParkingsByPartnerEmail("partner@test.com");
-
-        // Assert
-        assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertNotNull(response.getBody());
-        assertEquals(1, response.getBody().size());
-        verify(parkingService).getParkingsByPartnerEmail("partner@test.com");
-    }
-
-    @Test
-    @WithMockUser(roles = "SOCIO")
-    void getParkingsByPartnerEmail_AsSocio_Success() {
-        // Arrange
-        List<Parking> parkings = List.of(testParking);
-        when(parkingService.getParkingsByPartnerEmail("partner@test.com")).thenReturn(parkings);
-
-        // Act
-        ResponseEntity<List<Parking>> response = parkingController.getParkingsByPartnerEmail("partner@test.com");
-
-        // Assert
-        assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertNotNull(response.getBody());
-        verify(parkingService).getParkingsByPartnerEmail("partner@test.com");
-    }
-
-    @Test
-    @WithMockUser(roles = "ADMIN")
-    void associatePartnerToParking_AsAdmin_Success() {
+    void associatePartnerToParkingAsAdminSuccess() {
         // Arrange
         when(parkingService.associatePartnerToParking(anyLong(), anyLong())).thenReturn(testParking);
 
@@ -275,23 +205,24 @@ class ParkingControllerTest {
         // Assert
         assertEquals(HttpStatus.OK, response.getStatusCode());
         assertNotNull(response.getBody());
-        verify(parkingService).associatePartnerToParking(1L, 1L);
+        assertEquals("Test Parking", response.getBody().getName());
+        verify(parkingService).associatePartnerToParking(1L, associateRequest.getPartnerId());
     }
 
     @Test
     @WithMockUser(roles = "SOCIO")
-    void associatePartnerToParking_AsSocio_ThrowsAccessDeniedException() {
+    void associatePartnerToParkingAsSocioThrowsAccessDeniedException() {
         // Act & Assert
-        assertThrows(AccessDeniedException.class, () ->
+        assertThrows(org.springframework.security.access.AccessDeniedException.class, () ->
             parkingController.associatePartnerToParking(1L, associateRequest));
         verify(parkingService, never()).associatePartnerToParking(anyLong(), anyLong());
     }
 
     @Test
     @WithMockUser(roles = "ADMIN")
-    void removePartnerFromParking_AsAdmin_Success() {
+    void removePartnerFromParkingAsAdminSuccess() {
         // Arrange
-        when(parkingService.removePartnerFromParking(1L)).thenReturn(testParking);
+        when(parkingService.removePartnerFromParking(anyLong())).thenReturn(testParking);
 
         // Act
         ResponseEntity<Parking> response = parkingController.removePartnerFromParking(1L);
@@ -299,51 +230,22 @@ class ParkingControllerTest {
         // Assert
         assertEquals(HttpStatus.OK, response.getStatusCode());
         assertNotNull(response.getBody());
+        assertEquals("Test Parking", response.getBody().getName());
         verify(parkingService).removePartnerFromParking(1L);
     }
 
     @Test
     @WithMockUser(roles = "SOCIO")
-    void removePartnerFromParking_AsSocio_ThrowsAccessDeniedException() {
+    void removePartnerFromParkingAsSocioThrowsAccessDeniedException() {
         // Act & Assert
-        assertThrows(AccessDeniedException.class, () ->
+        assertThrows(org.springframework.security.access.AccessDeniedException.class, () ->
             parkingController.removePartnerFromParking(1L));
         verify(parkingService, never()).removePartnerFromParking(anyLong());
     }
 
     @Test
     @WithMockUser(roles = "ADMIN")
-    void hasPartner_AsAdmin_Success() {
-        // Arrange
-        when(parkingService.hasPartner(1L)).thenReturn(true);
-
-        // Act
-        ResponseEntity<Boolean> response = parkingController.hasPartner(1L);
-
-        // Assert
-        assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertEquals(Boolean.TRUE, response.getBody());  // compara wrappers, sin unboxing
-        verify(parkingService).hasPartner(1L);
-    }
-
-    @Test
-    @WithMockUser(roles = "SOCIO")
-    void hasPartner_AsSocio_Success() {
-        // Arrange
-        when(parkingService.hasPartner(1L)).thenReturn(false);
-
-        // Act
-        ResponseEntity<Boolean> response = parkingController.hasPartner(1L);
-
-        // Assert
-        assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertFalse(response.getBody());
-        verify(parkingService).hasPartner(1L);
-    }
-
-    @Test
-    @WithMockUser(roles = "ADMIN")
-    void getParkingsWithoutPartner_AsAdmin_Success() {
+    void getParkingsWithoutPartnerAsAdminSuccess() {
         // Arrange
         List<Parking> parkings = Arrays.asList(testParking);
         when(parkingService.getParkingsWithoutPartner()).thenReturn(parkings);
@@ -360,37 +262,10 @@ class ParkingControllerTest {
 
     @Test
     @WithMockUser(roles = "SOCIO")
-    void getParkingsWithoutPartner_AsSocio_ThrowsAccessDeniedException() {
+    void getParkingsWithoutPartnerAsSocioThrowsAccessDeniedException() {
         // Act & Assert
-        assertThrows(AccessDeniedException.class, () -> {
-            parkingController.getParkingsWithoutPartner();
-        });
+        assertThrows(org.springframework.security.access.AccessDeniedException.class, () ->
+            parkingController.getParkingsWithoutPartner());
         verify(parkingService, never()).getParkingsWithoutPartner();
-    }
-
-    @Test
-    @WithMockUser(roles = "ADMIN")
-    void createParking_ValidationException_ReturnsBadRequest() {
-        // Arrange
-        when(parkingService.createParking(any(ParkingRequest.class)))
-                .thenThrow(new ValidationException("Validation error"));
-
-        // Act & Assert
-        assertThrows(ValidationException.class, () -> {
-            parkingController.createParking(parkingRequest);
-        });
-    }
-
-    @Test
-    @WithMockUser(roles = "ADMIN")
-    void getParkingById_NotFound_ThrowsValidationException() {
-        // Arrange
-        when(parkingService.getParkingById(999L))
-                .thenThrow(new ValidationException("Parqueadero no encontrado"));
-
-        // Act & Assert
-        assertThrows(ValidationException.class, () -> {
-            parkingController.getParkingById(999L);
-        });
     }
 }
