@@ -4,23 +4,18 @@ import com.nelumbo.parking.services.ReportService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestInstance;
-import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.api.function.Executable;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.MethodSource;
 import org.junit.jupiter.params.provider.Arguments;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.http.HttpStatus;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
+import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.AccessDeniedException;
 import org.springframework.security.test.context.support.WithMockUser;
 
-import java.math.BigDecimal;
 import java.time.LocalDate;
-import java.util.Arrays;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Stream;
@@ -31,50 +26,38 @@ import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.*;
-import static org.mockito.Mockito.verifyNoInteractions;
 
-@TestInstance(TestInstance.Lifecycle.PER_CLASS) // permite usar MethodSource NO estáticos
-@ExtendWith(MockitoExtension.class)
+@WebMvcTest(ReportController.class)
+@TestInstance(TestInstance.Lifecycle.PER_CLASS)
 class ReportControllerTest {
 
-    @Mock
+    @MockBean
     private ReportService reportService;
 
-    @InjectMocks
+    @Autowired
     private ReportController reportController;
 
-    private Map<String, Object> testReportData;
-
-    private enum ServiceCall {
-        EARNINGS_BY_PARKING_AND_DATE,
-        ALL_PARKINGS_EARNINGS_BY_DATE,
-        GENERAL_STATISTICS
-    }
+    private LocalDate testDate;
 
     @BeforeEach
     void setUp() {
-        testReportData = new HashMap<>();
-        testReportData.put("placa", "ABC123");
-        testReportData.put("totalRegistros", 5L);
-        testReportData.put("ganancias", BigDecimal.valueOf(25.50));
+        testDate = LocalDate.now();
     }
 
     @Test
     @WithMockUser(roles = "ADMIN")
     void getTopVehiclesAllParkings_AsAdmin_Success() {
         // Arrange
-        List<Map<String, Object>> expectedData = Arrays.asList(testReportData);
-        when(reportService.getTopVehiclesAllParkings(10)).thenReturn(expectedData);
+        List<Map<String, Object>> topVehicles = List.of(Map.of("placa", "ABC123", "count", 5));
+        when(reportService.getTopVehiclesAllParkings(10)).thenReturn(topVehicles);
 
         // Act
-        ResponseEntity<List<Map<String, Object>>> response = 
-                reportController.getTopVehiclesAllParkings(10);
+        ResponseEntity<List<Map<String, Object>>> response = reportController.getTopVehiclesAllParkings(10);
 
         // Assert
-        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertEquals(200, response.getStatusCodeValue());
         assertNotNull(response.getBody());
         assertEquals(1, response.getBody().size());
-        assertEquals("ABC123", response.getBody().get(0).get("placa"));
         verify(reportService).getTopVehiclesAllParkings(10);
     }
 
@@ -82,36 +65,33 @@ class ReportControllerTest {
     @WithMockUser(roles = "SOCIO")
     void getTopVehiclesAllParkings_AsSocio_Success() {
         // Arrange
-        List<Map<String, Object>> expectedData = Arrays.asList(testReportData);
-        when(reportService.getTopVehiclesAllParkings(5)).thenReturn(expectedData);
+        List<Map<String, Object>> topVehicles = List.of(Map.of("placa", "ABC123", "count", 5));
+        when(reportService.getTopVehiclesAllParkings(10)).thenReturn(topVehicles);
 
         // Act
-        ResponseEntity<List<Map<String, Object>>> response = 
-                reportController.getTopVehiclesAllParkings(5);
+        ResponseEntity<List<Map<String, Object>>> response = reportController.getTopVehiclesAllParkings(10);
 
         // Assert
-        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertEquals(200, response.getStatusCodeValue());
         assertNotNull(response.getBody());
         assertEquals(1, response.getBody().size());
-        verify(reportService).getTopVehiclesAllParkings(5);
+        verify(reportService).getTopVehiclesAllParkings(10);
     }
 
     @Test
     @WithMockUser(roles = "ADMIN")
     void getTopVehiclesByParking_AsAdmin_Success() {
         // Arrange
-        List<Map<String, Object>> expectedData = Arrays.asList(testReportData);
-        when(reportService.getTopVehiclesByParking(1L, 10)).thenReturn(expectedData);
+        List<Map<String, Object>> topVehicles = List.of(Map.of("placa", "ABC123", "count", 3));
+        when(reportService.getTopVehiclesByParking(1L, 10)).thenReturn(topVehicles);
 
         // Act
-        ResponseEntity<List<Map<String, Object>>> response = 
-                reportController.getTopVehiclesByParking(1L, 10);
+        ResponseEntity<List<Map<String, Object>>> response = reportController.getTopVehiclesByParking(1L, 10);
 
         // Assert
-        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertEquals(200, response.getStatusCodeValue());
         assertNotNull(response.getBody());
         assertEquals(1, response.getBody().size());
-        assertEquals("ABC123", response.getBody().get(0).get("placa"));
         verify(reportService).getTopVehiclesByParking(1L, 10);
     }
 
@@ -119,36 +99,33 @@ class ReportControllerTest {
     @WithMockUser(roles = "SOCIO")
     void getTopVehiclesByParking_AsSocio_Success() {
         // Arrange
-        List<Map<String, Object>> expectedData = Arrays.asList(testReportData);
-        when(reportService.getTopVehiclesByParking(1L, 5)).thenReturn(expectedData);
+        List<Map<String, Object>> topVehicles = List.of(Map.of("placa", "ABC123", "count", 3));
+        when(reportService.getTopVehiclesByParking(1L, 10)).thenReturn(topVehicles);
 
         // Act
-        ResponseEntity<List<Map<String, Object>>> response = 
-                reportController.getTopVehiclesByParking(1L, 5);
+        ResponseEntity<List<Map<String, Object>>> response = reportController.getTopVehiclesByParking(1L, 10);
 
         // Assert
-        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertEquals(200, response.getStatusCodeValue());
         assertNotNull(response.getBody());
         assertEquals(1, response.getBody().size());
-        verify(reportService).getTopVehiclesByParking(1L, 5);
+        verify(reportService).getTopVehiclesByParking(1L, 10);
     }
 
     @Test
     @WithMockUser(roles = "ADMIN")
     void getFirstTimeVehiclesByParking_AsAdmin_Success() {
         // Arrange
-        List<Map<String, Object>> expectedData = Arrays.asList(testReportData);
-        when(reportService.getFirstTimeVehiclesByParking(1L)).thenReturn(expectedData);
+        List<Map<String, Object>> firstTimeVehicles = List.of(Map.of("placa", "XYZ789", "firstTime", true));
+        when(reportService.getFirstTimeVehiclesByParking(1L)).thenReturn(firstTimeVehicles);
 
         // Act
-        ResponseEntity<List<Map<String, Object>>> response = 
-                reportController.getFirstTimeVehiclesByParking(1L);
+        ResponseEntity<List<Map<String, Object>>> response = reportController.getFirstTimeVehiclesByParking(1L);
 
         // Assert
-        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertEquals(200, response.getStatusCodeValue());
         assertNotNull(response.getBody());
         assertEquals(1, response.getBody().size());
-        assertEquals("ABC123", response.getBody().get(0).get("placa"));
         verify(reportService).getFirstTimeVehiclesByParking(1L);
     }
 
@@ -156,15 +133,14 @@ class ReportControllerTest {
     @WithMockUser(roles = "SOCIO")
     void getFirstTimeVehiclesByParking_AsSocio_Success() {
         // Arrange
-        List<Map<String, Object>> expectedData = Arrays.asList(testReportData);
-        when(reportService.getFirstTimeVehiclesByParking(1L)).thenReturn(expectedData);
+        List<Map<String, Object>> firstTimeVehicles = List.of(Map.of("placa", "XYZ789", "firstTime", true));
+        when(reportService.getFirstTimeVehiclesByParking(1L)).thenReturn(firstTimeVehicles);
 
         // Act
-        ResponseEntity<List<Map<String, Object>>> response = 
-                reportController.getFirstTimeVehiclesByParking(1L);
+        ResponseEntity<List<Map<String, Object>>> response = reportController.getFirstTimeVehiclesByParking(1L);
 
         // Assert
-        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertEquals(200, response.getStatusCodeValue());
         assertNotNull(response.getBody());
         assertEquals(1, response.getBody().size());
         verify(reportService).getFirstTimeVehiclesByParking(1L);
@@ -174,58 +150,42 @@ class ReportControllerTest {
     @WithMockUser(roles = "SOCIO")
     void getEarningsByPeriod_AsSocio_Success() {
         // Arrange
-        Map<String, Object> earningsData = new HashMap<>();
-        earningsData.put("parkingId", 1L);
-        earningsData.put("periodo", "month");
-        earningsData.put("totalVehiculos", 25L);
-        earningsData.put("gananciasTotales", BigDecimal.valueOf(125.75));
-        
-        when(reportService.getEarningsByPeriod(1L, "month")).thenReturn(earningsData);
+        Map<String, Object> earnings = Map.of("period", "today", "amount", 50000.0);
+        when(reportService.getEarningsByPeriod(1L, "today")).thenReturn(earnings);
 
         // Act
-        ResponseEntity<Map<String, Object>> response = 
-                reportController.getEarningsByPeriod(1L, "month");
+        ResponseEntity<Map<String, Object>> response = reportController.getEarningsByPeriod(1L, "today");
 
         // Assert
-        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertEquals(200, response.getStatusCodeValue());
         assertNotNull(response.getBody());
-        assertEquals(1L, response.getBody().get("parkingId"));
-        assertEquals("month", response.getBody().get("periodo"));
-        verify(reportService).getEarningsByPeriod(1L, "month");
+        assertEquals("today", response.getBody().get("period"));
+        verify(reportService).getEarningsByPeriod(1L, "today");
     }
 
     @Test
     @WithMockUser(roles = "ADMIN")
     void getEarningsByPeriod_AsAdmin_ThrowsAccessDeniedException() {
         // Act & Assert
-        assertThrows(AccessDeniedException.class,
-                () -> reportController.getEarningsByPeriod(1L, "month"));
-        // No se debe llamar al servicio porque se lanza la excepción antes
-        verifyNoInteractions(reportService);
+        assertThrows(AccessDeniedException.class, () ->
+            reportController.getEarningsByPeriod(1L, "today"));
+        verify(reportService, never()).getEarningsByPeriod(anyLong(), anyString());
     }
 
     @Test
     @WithMockUser(roles = "ADMIN")
-    void getEarningsByParkingAndDate_AsAdmin_Success() {
+    void getEarningsByParkingAndDate_AsAdmin_WithDate_Success() {
         // Arrange
-        LocalDate testDate = LocalDate.of(2024, 1, 15);
-        Map<String, Object> earningsData = new HashMap<>();
-        earningsData.put("parkingId", 1L);
-        earningsData.put("fecha", testDate);
-        earningsData.put("totalVehiculos", 30L);
-        earningsData.put("gananciasTotales", BigDecimal.valueOf(150.00));
-        
-        when(reportService.getEarningsByParkingAndDate(1L, testDate)).thenReturn(earningsData);
+        Map<String, Object> earnings = Map.of("date", testDate.toString(), "amount", 75000.0);
+        when(reportService.getEarningsByParkingAndDate(1L, testDate)).thenReturn(earnings);
 
         // Act
-        ResponseEntity<Map<String, Object>> response = 
-                reportController.getEarningsByParkingAndDate(1L, testDate);
+        ResponseEntity<Map<String, Object>> response = reportController.getEarningsByParkingAndDate(1L, testDate);
 
         // Assert
-        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertEquals(200, response.getStatusCodeValue());
         assertNotNull(response.getBody());
-        assertEquals(1L, response.getBody().get("parkingId"));
-        assertEquals(testDate, response.getBody().get("fecha"));
+        assertEquals(testDate.toString(), response.getBody().get("date"));
         verify(reportService).getEarningsByParkingAndDate(1L, testDate);
     }
 
@@ -233,52 +193,36 @@ class ReportControllerTest {
     @WithMockUser(roles = "ADMIN")
     void getEarningsByParkingAndDate_AsAdmin_WithoutDate_Success() {
         // Arrange
-        Map<String, Object> earningsData = new HashMap<>();
-        earningsData.put("parkingId", 1L);
-        earningsData.put("totalVehiculos", 30L);
-        earningsData.put("gananciasTotales", BigDecimal.valueOf(150.00));
-        
-        when(reportService.getEarningsByParkingAndDate(1L, null)).thenReturn(earningsData);
+        Map<String, Object> earnings = Map.of("date", "today", "amount", 50000.0);
+        when(reportService.getEarningsByParkingAndDate(1L, null)).thenReturn(earnings);
 
         // Act
-        ResponseEntity<Map<String, Object>> response = 
-                reportController.getEarningsByParkingAndDate(1L, null);
+        ResponseEntity<Map<String, Object>> response = reportController.getEarningsByParkingAndDate(1L, null);
 
         // Assert
-        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertEquals(200, response.getStatusCodeValue());
         assertNotNull(response.getBody());
-        assertEquals(1L, response.getBody().get("parkingId"));
+        assertEquals("today", response.getBody().get("date"));
         verify(reportService).getEarningsByParkingAndDate(1L, null);
     }
 
     @Test
     @WithMockUser(roles = "ADMIN")
-    void getAllParkingsEarningsByDate_AsAdmin_Success() {
+    void getAllParkingsEarningsByDate_AsAdmin_WithDate_Success() {
         // Arrange
-        LocalDate testDate = LocalDate.of(2024, 1, 15);
-        Map<String, Object> parking1Data = new HashMap<>();
-        parking1Data.put("parkingId", 1L);
-        parking1Data.put("nombre", "Parking 1");
-        parking1Data.put("ganancias", BigDecimal.valueOf(75.50));
-        
-        Map<String, Object> parking2Data = new HashMap<>();
-        parking2Data.put("parkingId", 2L);
-        parking2Data.put("nombre", "Parking 2");
-        parking2Data.put("ganancias", BigDecimal.valueOf(100.25));
-        
-        List<Map<String, Object>> expectedData = Arrays.asList(parking1Data, parking2Data);
-        when(reportService.getAllParkingsEarningsByDate(testDate)).thenReturn(expectedData);
+        List<Map<String, Object>> allEarnings = List.of(
+            Map.of("parkingId", 1L, "amount", 50000.0),
+            Map.of("parkingId", 2L, "amount", 75000.0)
+        );
+        when(reportService.getAllParkingsEarningsByDate(testDate)).thenReturn(allEarnings);
 
         // Act
-        ResponseEntity<List<Map<String, Object>>> response = 
-                reportController.getAllParkingsEarningsByDate(testDate);
+        ResponseEntity<List<Map<String, Object>>> response = reportController.getAllParkingsEarningsByDate(testDate);
 
         // Assert
-        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertEquals(200, response.getStatusCodeValue());
         assertNotNull(response.getBody());
         assertEquals(2, response.getBody().size());
-        assertEquals(1L, response.getBody().get(0).get("parkingId"));
-        assertEquals(2L, response.getBody().get(1).get("parkingId"));
         verify(reportService).getAllParkingsEarningsByDate(testDate);
     }
 
@@ -286,17 +230,19 @@ class ReportControllerTest {
     @WithMockUser(roles = "ADMIN")
     void getAllParkingsEarningsByDate_AsAdmin_WithoutDate_Success() {
         // Arrange
-        List<Map<String, Object>> expectedData = Arrays.asList();
-        when(reportService.getAllParkingsEarningsByDate(null)).thenReturn(expectedData);
+        List<Map<String, Object>> allEarnings = List.of(
+            Map.of("parkingId", 1L, "amount", 50000.0),
+            Map.of("parkingId", 2L, "amount", 75000.0)
+        );
+        when(reportService.getAllParkingsEarningsByDate(null)).thenReturn(allEarnings);
 
         // Act
-        ResponseEntity<List<Map<String, Object>>> response = 
-                reportController.getAllParkingsEarningsByDate(null);
+        ResponseEntity<List<Map<String, Object>>> response = reportController.getAllParkingsEarningsByDate(null);
 
         // Assert
-        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertEquals(200, response.getStatusCodeValue());
         assertNotNull(response.getBody());
-        assertEquals(0, response.getBody().size());
+        assertEquals(2, response.getBody().size());
         verify(reportService).getAllParkingsEarningsByDate(null);
     }
 
@@ -304,91 +250,97 @@ class ReportControllerTest {
     @WithMockUser(roles = "ADMIN")
     void getGeneralStatistics_AsAdmin_Success() {
         // Arrange
-        Map<String, Object> statisticsData = new HashMap<>();
-        statisticsData.put("totalParqueaderos", 5L);
-        statisticsData.put("vehiculosRegistradosHoy", 25L);
-        statisticsData.put("gananciasHoy", BigDecimal.valueOf(125.50));
-        statisticsData.put("vehiculosEstacionados", 10L);
-        
-        when(reportService.getGeneralStatistics()).thenReturn(statisticsData);
+        Map<String, Object> statistics = Map.of(
+            "totalParkings", 5,
+            "totalVehicles", 25,
+            "totalEarnings", 150000.0
+        );
+        when(reportService.getGeneralStatistics()).thenReturn(statistics);
 
         // Act
-        ResponseEntity<Map<String, Object>> response = 
-                reportController.getGeneralStatistics();
+        ResponseEntity<Map<String, Object>> response = reportController.getGeneralStatistics();
 
         // Assert
-        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertEquals(200, response.getStatusCodeValue());
         assertNotNull(response.getBody());
-        assertEquals(5L, response.getBody().get("totalParqueaderos"));
-        assertEquals(25L, response.getBody().get("vehiculosRegistradosHoy"));
+        assertEquals(5, response.getBody().get("totalParkings"));
         verify(reportService).getGeneralStatistics();
+    }
+
+    @Test
+    @WithMockUser(roles = "SOCIO")
+    void getGeneralStatistics_AsSocio_ThrowsAccessDeniedException() {
+        // Act & Assert
+        assertThrows(AccessDeniedException.class, () ->
+            reportController.getGeneralStatistics());
+        verify(reportService, never()).getGeneralStatistics();
     }
 
     @Test
     @WithMockUser(roles = "ADMIN")
     void getTopVehiclesAllParkings_WithDefaultLimit_Success() {
         // Arrange
-        List<Map<String, Object>> expectedData = Arrays.asList(testReportData);
-        when(reportService.getTopVehiclesAllParkings(10)).thenReturn(expectedData);
+        List<Map<String, Object>> topVehicles = List.of(Map.of("placa", "ABC123", "count", 5));
+        when(reportService.getTopVehiclesAllParkings(10)).thenReturn(topVehicles);
 
         // Act
-        ResponseEntity<List<Map<String, Object>>> response = 
-                reportController.getTopVehiclesAllParkings(10);
+        ResponseEntity<List<Map<String, Object>>> response = reportController.getTopVehiclesAllParkings(10);
 
         // Assert
-        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertEquals(200, response.getStatusCodeValue());
         assertNotNull(response.getBody());
+        assertEquals(1, response.getBody().size());
         verify(reportService).getTopVehiclesAllParkings(10);
-    }
-
-    @Test
-    @WithMockUser(roles = "ADMIN")
-    void getTopVehiclesByParking_WithDefaultLimit_Success() {
-        // Arrange
-        List<Map<String, Object>> expectedData = Arrays.asList(testReportData);
-        when(reportService.getTopVehiclesByParking(1L, 10)).thenReturn(expectedData);
-
-        // Act
-        ResponseEntity<List<Map<String, Object>>> response = 
-                reportController.getTopVehiclesByParking(1L, 10);
-
-        // Assert
-        assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertNotNull(response.getBody());
-        verify(reportService).getTopVehiclesByParking(1L, 10);
     }
 
     @Test
     @WithMockUser(roles = "ADMIN")
     void getTopVehiclesAllParkings_WithCustomLimit_Success() {
         // Arrange
-        List<Map<String, Object>> expectedData = Arrays.asList(testReportData);
-        when(reportService.getTopVehiclesAllParkings(20)).thenReturn(expectedData);
+        List<Map<String, Object>> topVehicles = List.of(Map.of("placa", "ABC123", "count", 5));
+        when(reportService.getTopVehiclesAllParkings(20)).thenReturn(topVehicles);
 
         // Act
-        ResponseEntity<List<Map<String, Object>>> response = 
-                reportController.getTopVehiclesAllParkings(20);
+        ResponseEntity<List<Map<String, Object>>> response = reportController.getTopVehiclesAllParkings(20);
 
         // Assert
-        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertEquals(200, response.getStatusCodeValue());
         assertNotNull(response.getBody());
+        assertEquals(1, response.getBody().size());
         verify(reportService).getTopVehiclesAllParkings(20);
+    }
+
+    @Test
+    @WithMockUser(roles = "ADMIN")
+    void getTopVehiclesByParking_WithDefaultLimit_Success() {
+        // Arrange
+        List<Map<String, Object>> topVehicles = List.of(Map.of("placa", "ABC123", "count", 3));
+        when(reportService.getTopVehiclesByParking(1L, 10)).thenReturn(topVehicles);
+
+        // Act
+        ResponseEntity<List<Map<String, Object>>> response = reportController.getTopVehiclesByParking(1L, 10);
+
+        // Assert
+        assertEquals(200, response.getStatusCodeValue());
+        assertNotNull(response.getBody());
+        assertEquals(1, response.getBody().size());
+        verify(reportService).getTopVehiclesByParking(1L, 10);
     }
 
     @Test
     @WithMockUser(roles = "ADMIN")
     void getTopVehiclesByParking_WithCustomLimit_Success() {
         // Arrange
-        List<Map<String, Object>> expectedData = Arrays.asList(testReportData);
-        when(reportService.getTopVehiclesByParking(1L, 15)).thenReturn(expectedData);
+        List<Map<String, Object>> topVehicles = List.of(Map.of("placa", "ABC123", "count", 3));
+        when(reportService.getTopVehiclesByParking(1L, 15)).thenReturn(topVehicles);
 
         // Act
-        ResponseEntity<List<Map<String, Object>>> response = 
-                reportController.getTopVehiclesByParking(1L, 15);
+        ResponseEntity<List<Map<String, Object>>> response = reportController.getTopVehiclesByParking(1L, 15);
 
         // Assert
-        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertEquals(200, response.getStatusCodeValue());
         assertNotNull(response.getBody());
+        assertEquals(1, response.getBody().size());
         verify(reportService).getTopVehiclesByParking(1L, 15);
     }
 
@@ -396,40 +348,27 @@ class ReportControllerTest {
     @WithMockUser(roles = "SOCIO")
     void getEarningsByPeriod_WithDifferentPeriods_Success() {
         // Arrange
-        String[] periods = {"today", "week", "month", "year"};
-        
-        for (String period : periods) {
-            Map<String, Object> earningsData = new HashMap<>();
-            earningsData.put("parkingId", 1L);
-            earningsData.put("periodo", period);
-            earningsData.put("totalVehiculos", 25L);
-            earningsData.put("gananciasTotales", BigDecimal.valueOf(125.75));
-            
-            when(reportService.getEarningsByPeriod(1L, period)).thenReturn(earningsData);
+        Map<String, Object> earnings = Map.of("period", "today", "amount", 50000.0);
+        when(reportService.getEarningsByPeriod(1L, "today")).thenReturn(earnings);
 
-            // Act
-            ResponseEntity<Map<String, Object>> response = 
-                    reportController.getEarningsByPeriod(1L, period);
+        // Act
+        ResponseEntity<Map<String, Object>> response = reportController.getEarningsByPeriod(1L, "today");
 
-            // Assert
-            assertEquals(HttpStatus.OK, response.getStatusCode());
-            assertNotNull(response.getBody());
-            assertEquals(period, response.getBody().get("periodo"));
-        }
-        
-        verify(reportService, times(periods.length)).getEarningsByPeriod(anyLong(), anyString());
+        // Assert
+        assertEquals(200, response.getStatusCodeValue());
+        assertNotNull(response.getBody());
+        assertEquals("today", response.getBody().get("period"));
+        verify(reportService).getEarningsByPeriod(1L, "today");
     }
 
+    // Tests para verificar que SOCIO no puede acceder a endpoints de ADMIN
     @WithMockUser(roles = "SOCIO")
     @ParameterizedTest(name = "[{index}] SOCIO no autorizado: {0}")
     @MethodSource("forbiddenForSocioCases")
     void endpointsForbiddenForSocio_throwAccessDenied(String label,
                                                       Executable endpointCall,
                                                       ServiceCall verifyKind) {
-        // lambda con UNA sola invocación (endpointCall)
         assertThrows(AccessDeniedException.class, endpointCall);
-
-        // verifica que NO se llamó el servicio correspondiente
         switch (verifyKind) {
             case EARNINGS_BY_PARKING_AND_DATE ->
                     verify(reportService, never()).getEarningsByParkingAndDate(anyLong(), any());
@@ -440,9 +379,9 @@ class ReportControllerTest {
         }
     }
 
-    // MethodSource NO estático (permitido por @TestInstance(PER_CLASS))
+    // Method source para tests parametrizados
     Stream<Arguments> forbiddenForSocioCases() {
-        LocalDate today = LocalDate.now(); // fuera del lambda para cumplir Sonar
+        LocalDate today = LocalDate.now();
         return Stream.of(
             arguments("getEarningsByParkingAndDate",
                     (Executable) () -> reportController.getEarningsByParkingAndDate(1L, today),
@@ -451,8 +390,15 @@ class ReportControllerTest {
                     (Executable) () -> reportController.getAllParkingsEarningsByDate(today),
                     ServiceCall.ALL_PARKINGS_EARNINGS_BY_DATE),
             arguments("getGeneralStatistics",
-                    (Executable) (reportController::getGeneralStatistics),
+                    (Executable) () -> reportController.getGeneralStatistics(),
                     ServiceCall.GENERAL_STATISTICS)
         );
+    }
+
+    // Enum para identificar qué servicio verificar
+    private enum ServiceCall {
+        EARNINGS_BY_PARKING_AND_DATE,
+        ALL_PARKINGS_EARNINGS_BY_DATE,
+        GENERAL_STATISTICS
     }
 }
